# ctti

./: .buckconfig  .gitignore  .gitlab-ci.yml  .travis.yml  BUCK  CMakeLists.txt  README.md  buckaroo.json  conanfile.py  inception.py
cmake/: Config.cmake.in  vs_source_groups.cmake
ctti/: ctti  main.cpp  type_id.hpp
ctti/detail/: array.hpp  hash.hpp  pretty_function.hpp  string.hpp
examples/: BUCK  CMakeLists.txt  main.cpp
include/ctti/: detailed_nameof.hpp  map.hpp  model.hpp  name.hpp  nameof.hpp  serialization.hpp  static_value.hpp  symbol.hpp  tie.hpp  type_id.hpp
include/ctti/detail/: algorithm.hpp  array.hpp  cstring.hpp  hash.hpp  language_features.hpp  meta.hpp  name_filters.hpp  pretty_function.hpp  static_value.hpp  string.hpp
test_package/: BUCK  CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  cstring.cpp  detailed_nameof.cpp  hash.cpp  map.cpp  model.cpp  name_filters.cpp  nameof.cpp  serialization.cpp  symbol.cpp  tie.cpp
tests/static/: CMakeLists.txt  algorithm.cpp  cstring.cpp  hash.cpp  model.cpp  name.cpp  static_test.hpp  static_value.cpp  symbol.cpp
